examples/smlfmt-1.2.0/test/fail/bad-tyvars.sml
val ('xxx, ''y) x = 5
val ('xxx, ''y  x = 6
